# Rust_bot_DC

./: Cargo.toml  docker-compose.yml
bot/: Cargo.toml  Dockerfile
bot/src/: main.rs  queue.rs  redis_ext.rs  tasks.rs  utils.rs
bot/src/commands/: mod.rs  ping.rs  raid.rs
bot/src/db/: models.rs  repo.rs
bot/src/handlers/: components.rs  mod.rs
bot/src/ui/: embeds.rs  menus.rs  mod.rs
db/: init.sql
src/: main.rs  tasks.rs  utils.rs
src/commands/: mod.rs  ping.rs  raid.rs
src/db/: mod.rs  models.rs  repo.rs
src/handlers/: components.rs  mod.rs  raid_handler.rs
src/modal/: mod.rs
src/ui/: embeds.rs  menus.rs  mod.rs  raid_modal.rs
