[package]
name = "rust-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = "0.12.4"            # Discord library
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "macros", "chrono", "uuid"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
dotenvy = "0.15"              # .env loading
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
uuid = { version = "1.4", features = ["serde", "v4"] }
