[package]
name = "rust-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = "0.12.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
dotenvy = "0.15"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# DB
sqlx = { version = "0.7", features = [
  "postgres", "runtime-tokio-native-tls", "macros", "time", "chrono", "uuid"
] }
uuid = { version = "1.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ephemeral state
dashmap = "5"
once_cell = "1"

# timezone helpers
chrono-tz = "0.8"
